Bug 105518 - F6 lands on infobar when it isnt visible
Summary: F6 lands on infobar when it isnt visible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords: accessibility
: 98968 100434 (view as bug list)
Depends on:
Blocks: a11y, Accessibility Infobar-UX
  Show dependency treegraph
 
Reported: 2017-01-25 12:06 UTC by Yousuf Philips (jay) (retired)
Modified: 2021-02-03 16:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-01-25 12:06:51 UTC
Steps:
1) Open Writer with NVDA screen reader running
2) Press F6 three times and the screen reader will say 'Option pane'
3) Press arrow keys or tab does nothing

This option pane is reachable with other screen readers (JAWS, Orca), but they wont say anything when you land on it, but the real question is what is this pane and why is focus reaching it.
Comment 1 am_dxer 2017-01-25 13:43:39 UTC
*** Bug 100434 has been marked as a duplicate of this bug. ***
Comment 2 am_dxer 2017-01-25 13:45:16 UTC
Confirming this behavior with Orca and NVDA on Master.
Comment 3 Maxim Monastirsky 2017-01-28 19:57:12 UTC
It's the infobar.
Comment 4 am_dxer 2017-01-31 13:32:53 UTC
Is there currently an alternative way to access the Infobar with a11y or is this not implemented yet?
Comment 5 Yousuf Philips (jay) (retired) 2017-02-02 12:37:10 UTC
(In reply to Maxim Monastirsky from comment #3)
> It's the infobar.

Thanks. Silly that its getting focus when its not visible. :D
Comment 6 am_dxer 2017-05-30 14:56:25 UTC
It appears that this one has been identified as being the Infobar. Would a bisect on this one still be useful or is it a waste of time?
Comment 7 Alex ARNAUD 2017-05-30 15:42:53 UTC
(In reply to am_dxer from comment #6)
> It appears that this one has been identified as being the Infobar. Would a
> bisect on this one still be useful or is it a waste of time?

If the problem wasn't present in earlier release it is useful.

Best regards.
Comment 8 Yousuf Philips (jay) (retired) 2017-05-30 16:22:20 UTC
(In reply to Alex ARNAUD from comment #7)
> If the problem wasn't present in earlier release it is useful.

Bibisect would only tell us when the infobar was implemented, from my tests its 4.0, so not very useful.
Comment 9 QA Administrators 2018-05-31 02:52:59 UTC Comment hidden (obsolete)
Comment 10 Alex ARNAUD 2018-06-16 15:30:36 UTC
Hello all

I can reproduce this on LibreOffice 6.2 daily build o
Comment 11 Alex ARNAUD 2018-06-16 15:31:27 UTC
...of the 2018-06-12. I'm testing on Debian GNU/Linux 9 "Stretch".

Best regards,
Alex.
Comment 12 QA Administrators 2019-06-17 02:46:58 UTC Comment hidden (obsolete)
Comment 13 Jim Raykowski 2019-11-25 06:40:34 UTC
Hi All,

Here is an offering for this that skips the Infobar on F6 when it is not shown:
https://gerrit.libreoffice.org/#/c/83636/
Comment 14 Commit Notification 2019-12-11 09:38:39 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ab044a4798d9968c303e5616f4a307cab0fd62d

tdf#105518 F6: Skip infobar when it has no children

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 V Stuart Foote 2019-12-21 16:37:46 UTC
Verified...

Version: 6.5.0.0.alpha0+ (x64)
Build ID: 209fc9fd7fa433947af0bf86e210d73fa7f5a045
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

Still have these substantial issues affecting keyboard AT support and a111y:
bug 109425 - for no accessible events being fired while in the NB
bug 107343 - for F10 use (or how to handle the Main menu when hidden)
bug 127488 - for no accelerator actions (on Windows at least) in the NB
Comment 16 V Stuart Foote 2021-02-03 16:01:27 UTC
*** Bug 98968 has been marked as a duplicate of this bug. ***