tdf#105518 F6: Skip infobar when it has no children

Change-Id: Id5375d9acfd20844a56da20fcf08c709423f75e0
Reviewed-on: https://gerrit.libreoffice.org/83636
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>